--- a/OOPProjects/PooP2/styles/styles.css
+++ b/OOPProjects/PooP2/styles/styles.css
@@ -6,7 +6,7 @@
 
 body{
     background: rgb(226, 226, 225);
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -18,7 +18,11 @@ body{
     padding: 4rem;
     text-align: center;
 }
-
+header{
+    display: grid;
+    margin: 45vh 42%;
+    position: absolute;
+}
 h1{
     color: rgba(22, 82, 20, 0.733);
     font-size: 3rem;
